---
source: crates/pina_codama_renderer/src/__tests.rs
expression: content
---
//! This code was AUTOGENERATED by `pina_codama_renderer`.
//! Please DO NOT EDIT THIS FILE directly.
//! Regenerate it from Codama IDLs instead.
#![allow(
	clippy::doc_lazy_continuation,
	clippy::empty_line_after_doc_comments,
	clippy::new_without_default,
	clippy::too_many_arguments
)]

pub const TAKE_DISCRIMINATOR: u8 = 2u8;
/// Compute units `Take` consumed in its most expensive recorded
/// Surfpool simulation.
pub const TAKE_MEASURED_COMPUTE_UNITS: u32 = 31507;
/// Compute unit limit to request for a transaction carrying `Take`:
/// the measurement plus the project's margin and the cost of the compute budget
/// instructions. Pass it, or the sum for several instructions, to
/// `set_compute_unit_limit_instruction`.
pub const TAKE_COMPUTE_UNIT_LIMIT: u32 = 38200;

/// Accounts.
#[derive(Clone, Debug)]
pub struct Take {
	pub taker: solana_pubkey::Pubkey,
	pub mint_a: solana_pubkey::Pubkey,
	pub mint_b: solana_pubkey::Pubkey,
	pub taker_ata_a: solana_pubkey::Pubkey,
	pub taker_ata_b: solana_pubkey::Pubkey,
	pub maker: solana_pubkey::Pubkey,
	pub maker_ata_b: solana_pubkey::Pubkey,
	pub escrow: solana_pubkey::Pubkey,
	pub vault: solana_pubkey::Pubkey,
	pub token_program: solana_pubkey::Pubkey,
	pub associated_token_program: solana_pubkey::Pubkey,
	pub system_program: solana_pubkey::Pubkey,
}

impl Take {
	pub fn new(taker: solana_pubkey::Pubkey, mint_a: solana_pubkey::Pubkey, mint_b: solana_pubkey::Pubkey, taker_ata_a: solana_pubkey::Pubkey, taker_ata_b: solana_pubkey::Pubkey, maker: solana_pubkey::Pubkey, maker_ata_b: solana_pubkey::Pubkey, escrow: solana_pubkey::Pubkey, vault: solana_pubkey::Pubkey, token_program: solana_pubkey::Pubkey) -> Self {
		Self {
			taker,
			mint_a,
			mint_b,
			taker_ata_a,
			taker_ata_b,
			maker,
			maker_ata_b,
			escrow,
			vault,
			token_program,
			associated_token_program: solana_pubkey::pubkey!("ATokenGPvbdGVxr1b2hvZbsiqW5xWH25efTNsLJA8knL"),
			system_program: solana_pubkey::pubkey!("11111111111111111111111111111111"),
		}
	}

	pub fn instruction(&self, data: TakeInstructionData) -> solana_instruction::Instruction {
		self.instruction_with_remaining_accounts(data, &[])
	}

	#[allow(clippy::arithmetic_side_effects)]
	pub fn instruction_with_remaining_accounts(
		&self,
		data: TakeInstructionData,
		remaining_accounts: &[solana_instruction::AccountMeta],
	) -> solana_instruction::Instruction {
		let mut accounts = Vec::with_capacity(12 + remaining_accounts.len());
		accounts.push(solana_instruction::AccountMeta::new(self.taker, true));
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.mint_a, false));
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.mint_b, false));
		accounts.push(solana_instruction::AccountMeta::new(self.taker_ata_a, false));
		accounts.push(solana_instruction::AccountMeta::new(self.taker_ata_b, false));
		accounts.push(solana_instruction::AccountMeta::new(self.maker, false));
		accounts.push(solana_instruction::AccountMeta::new(self.maker_ata_b, false));
		accounts.push(solana_instruction::AccountMeta::new(self.escrow, false));
		accounts.push(solana_instruction::AccountMeta::new(self.vault, false));
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.token_program, false));
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.associated_token_program, false));
		accounts.push(solana_instruction::AccountMeta::new_readonly(self.system_program, false));
		accounts.extend_from_slice(remaining_accounts);
		solana_instruction::Instruction {
			program_id: crate::ESCROW_PROGRAM_ID,
			accounts,
			data: data.bytes,
		}
	}
}

/// Opaque, fully initialized instruction storage.
pub struct TakeInstructionData {
	bytes: Vec<u8>,
}

impl TakeInstructionData {
	pub fn new(configure: impl FnOnce(&mut TakeInstructionWireZc)) -> Result<Self, solana_program_error::ProgramError> {
		let mut bytes = vec![0u8; core::mem::size_of::<TakeInstructionWireZc>()];
		<TakeInstructionWire as pina::PinaPodFixed>::initialize(&mut bytes, |data| {
			configure(data);
			data.discriminator = TAKE_DISCRIMINATOR;
			Ok(())
		})
			.map_err(|_| solana_program_error::ProgramError::InvalidInstructionData)?;
		Ok(Self { bytes })
	}
}

#[doc(hidden)]
#[allow(clippy::len_without_is_empty)]
#[derive(pina::PinaPod)]
#[pinapod(crate = pina::pinapod, no_inherent)]
pub struct TakeInstructionWire {
	pub discriminator: u8,
}
